[gd_scene load_steps=11 format=3 uid="uid://buko3u36icg3k"]

[ext_resource type="PackedScene" uid="uid://bxhf63r8m5tpk" path="res://cena/player.tscn" id="1_8xtic"]
[ext_resource type="Script" uid="uid://csvou5qn3o4a3" path="res://script/main.gd" id="1_mk8v6"]
[ext_resource type="PackedScene" uid="uid://bmsfet3yqo3p5" path="res://cena/obstaculo.tscn" id="2_3tt73"]
[ext_resource type="Script" uid="uid://2hsg5mvdukq7" path="res://script/obstaculo_gerente.gd" id="2_7ije6"]
[ext_resource type="PackedScene" uid="uid://dddw8hq6ru0tp" path="res://cena/obstaculo_baixo.tscn" id="4_y3eto"]
[ext_resource type="Script" uid="uid://dixd31l4aowuk" path="res://script/tela_gerente.gd" id="5_mk8v6"]
[ext_resource type="Script" uid="uid://cdqu6iy6y7637" path="res://script/coin_gerente.gd" id="7_foyax"]
[ext_resource type="PackedScene" uid="uid://cy8n4f50kt4uu" path="res://cena/coin.tscn" id="8_q2a6g"]
[ext_resource type="AudioStream" uid="uid://clet04axb3bae" path="res://som/tema.mp3" id="9_c0jyn"]

[sub_resource type="BoxShape3D" id="BoxShape3D_q2a6g"]
size = Vector3(6, 3, 3.5)

[node name="CenaGerente" type="Node3D"]
script = ExtResource("1_mk8v6")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.623879, 0.759286, -0.185094, 0, 0.236838, 0.971549, 0.781521, 0.60613, -0.147758, 0, 7.5381, 0)
light_color = Color(0.998219, 0.972615, 0.958723, 1)
light_energy = 0.8
shadow_enabled = true
directional_shadow_max_distance = 110.0

[node name="Cenario" type="Node3D" parent="."]

[node name="CSGBox3D" type="CSGBox3D" parent="Cenario"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.283902, -23.0443)
use_collision = true
size = Vector3(6, 0.5, 50)

[node name="Player" type="Node3D" parent="."]

[node name="CharacterBody3D" parent="Player" instance=ExtResource("1_8xtic")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0378265, 0)

[node name="ObstaculoGerente" type="Node3D" parent="."]
script = ExtResource("2_7ije6")
Obstaculos = Array[PackedScene]([ExtResource("2_3tt73"), ExtResource("4_y3eto"), ExtResource("2_3tt73")])

[node name="spawnObstaculo" type="Timer" parent="ObstaculoGerente"]
wait_time = 1.2
autostart = true

[node name="tempoVivo" type="Timer" parent="."]
autostart = true

[node name="TelaGerente" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource("5_mk8v6")

[node name="TempoVivo" type="Label" parent="TelaGerente"]
layout_mode = 1
offset_right = 132.0
offset_bottom = 44.0
text = "Tempo vivo: "

[node name="Moedas" type="Label" parent="TelaGerente"]
layout_mode = 1
offset_left = 251.0
offset_top = -1.0
offset_right = 383.0
offset_bottom = 43.0
text = "Moedas:"

[node name="CoinGerente" type="Node3D" parent="."]
script = ExtResource("7_foyax")
pegaveis = Array[PackedScene]([ExtResource("8_q2a6g")])

[node name="tempoMoeda" type="Timer" parent="CoinGerente"]
wait_time = 1.4
autostart = true

[node name="ShapeCast3D" type="ShapeCast3D" parent="CoinGerente"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.62, -49.6831)
shape = SubResource("BoxShape3D_q2a6g")

[node name="musiquinha" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_c0jyn")
volume_db = 6.0

[connection signal="aumentar_multiplicador_velocidade" from="." to="ObstaculoGerente" method="_on_cena_gerente_aumentar_multiplicador_velocidade"]
[connection signal="aumentar_multiplicador_velocidade" from="." to="CoinGerente" method="_on_cena_gerente_aumentar_multiplicador_velocidade"]
[connection signal="aumentou_tempo_vivo" from="." to="TelaGerente" method="_on_cena_gerente_aumentou_tempo_vivo"]
[connection signal="pegou_moeda" from="." to="TelaGerente" method="_on_cena_gerente_pegou_moeda"]
[connection signal="morreu" from="Player/CharacterBody3D" to="." method="_on_character_body_3d_morreu"]
[connection signal="nova_linha_livre" from="ObstaculoGerente" to="CoinGerente" method="_on_obstaculo_gerente_nova_linha_livre"]
[connection signal="timeout" from="ObstaculoGerente/spawnObstaculo" to="ObstaculoGerente" method="_on_spawn_obstaculo_timeout"]
[connection signal="timeout" from="tempoVivo" to="." method="_on_tempo_vivo_timeout"]
[connection signal="pegou_moeda" from="CoinGerente" to="." method="_on_coin_gerente_pegou_moeda"]
[connection signal="timeout" from="CoinGerente/tempoMoeda" to="CoinGerente" method="_on_tempo_moeda_timeout"]
